# math-series

series.py/: README.md  pyproject.toml
series.py/math_series/: series.py
series.py/tests/: test_series_py.py
