[tool.poetry]
name = "series.py"
version = "0.1.0"
description = ""
authors = ["Lauren Sierra <laurenesierra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
